vlib/v/checker/tests/enum_error_module.vv
import time

fn main() {
	_ := time.NonExistingEnum.black
}
